syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (User) returns (User) {};
    rpc UpdateUser (UpdateUser) returns (User) {};

    rpc FindOne (UserById) returns (User) {};
    rpc FindAll (EmptyParams) returns (AllUser) {}; 
    rpc FindMany (MultipleUserById) returns (AllUser) {};

    rpc DeleteUser (UserById) returns (ResponseData) {};
}

message UserById {
    string id = 1;
}
       
message MultipleUserById {
    repeated string data = 1;
}

message User {
    string id = 1;
    string name = 2;
    int32 age = 3;
}

message CreateUser {
    string name = 1;
    int32 age = 2;
}

message UpdateUser {
    string id = 1;
    optional string name = 2;
    optional int32 age = 3;
}

message AllUser {
    repeated User data = 1;
}

message EmptyParams {}

message ResponseData {
    string response = 1;
}